--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "index.js",
   "dependencies": {
     "bootstrap": "4.5.2",
-    "jquery": "^3.5.1"
+    "jquery": "^3.5.1",
+    "ttf-loader": "^1.0.2",
+    "url-loader": "^4.1.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
